# tutorial-django

./: .gitignore  README.md  pyproject.toml
1 - caratteristiche principali/: README.md
1 - caratteristiche principali/negozio/: manage.py
1 - caratteristiche principali/negozio/negozio/: asgi.py
1_struttura_base_file/: README.md
1_struttura_base_file/negozio/negozio/: settings.py  urls.py  wsgi.py
2_applicazione_carrello/: ESERCIZI.md  README.md  SOLUZIONE.md
2_applicazione_carrello/negozio/: manage.py
2_applicazione_carrello/negozio/carrello/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
2_applicazione_carrello/negozio/carrello/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options_and_more.py  0003_product_category.py  0004_auto_20230807_0603.py
2_applicazione_carrello/negozio/carrello/tests/: test_e2e.py  test_unit.py
2_applicazione_carrello/negozio/carrello/tests/my_factory/: __init__.py  product_factory.py
2_applicazione_carrello/negozio/carrello/views/: __init__.py  model_viewset.py
2_applicazione_carrello/negozio/negozio/: asgi.py  settings.py  urls.py  wsgi.py
